# ilqr

./: .gitignore  LICENSE  README.md  ilqr.opam
examples/: dune  pendulum.ml  pendulum2.ml
src/: classic.ml  classic.mli  default.ml  default.mli  dune  ilqr.ml  ilqr.mli  linesearch.ml  linesearch.mli  lqr.ml  lqr.mli  regularisation.ml  regularisation.mli  regularization.ml
